--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/my.ico" href="/my.ico" />
-    <title>Lama Dev Portfolio</title>
+    <title>Ansh's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
